Bilder för free games
Fixade några divs för free games där det sksa vara massa bilder på
gratis spel.

--- a/Index.html
+++ b/Index.html
@@ -96,6 +96,16 @@
       </a>
     </div>
 
+    <h1 id="freegames"> Free Games </h1>
+
+    <div id="placement">  
+      <div id="tf2" id="dota2"></div>
+        <div id="rightsidegames">
+          <div id="dota2"></div>
+          <div id="warframe"></div>
+        </div>
+    </div>
+
 	</body>
 
 </html>
