Klar med fixning

--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,16 @@
+<!DOCTYPE html>
+
 <html>
 
 	<head>
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="script.js" type="text/css"></script>
 
-		<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" type="text/css">
   
-    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet" type="text/css">
 
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet" type="text/css">
   
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  
@@ -16,7 +18,7 @@
     
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" type="text/css">
 
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
 
@@ -72,14 +74,14 @@
         </div>
         <div class="item" id="img2">
             <div class="carousel-caption">
-              <h1 id="Sitename"> GameSearch </h1>
-              <h3 id="Gamename"> Counter Strike Global Offensive </h3>
+              <h1 id="Sitename2"> GameSearch </h1>
+              <h3 id="Gamename2"> Counter Strike Global Offensive </h3>
             </div>
         </div>
         <div class="item" id="img3">
           <div class="carousel-caption">
-            <h1 id="Sitename"> GameSearch </h1>
-            <h3 id="Gamename"> League of Legends </h3>
+            <h1 id="Sitename3"> GameSearch </h1>
+            <h3 id="Gamename3"> League of Legends </h3>
           </div>
         </div>
       </div>
@@ -97,7 +99,7 @@
     <h1 id="freegames"> Free Games </h1>
 
     <div id="placement">  
-      <div id="tf2" id="dota2"></div>
+      <div id="tf2"></div>
         <div id="rightsidegames">
           <div id="dota2"></div>
           <div id="warframe"></div>
